add ingredient list and recipe steps
Used an unordered list and ordered list to display recipe ingredients and steps

--- a/recipes/boursin_pasta.html
+++ b/recipes/boursin_pasta.html
@@ -34,5 +34,17 @@
         <li>Salt and pepper to taste</li>
     </ul>
 
+    <h2>Steps</h2>
+
+    <ol>
+        <li><strong>Cook the pasta:</strong> Bring a large pot of salted water to a boil and cook the pasta according to package instructions. Drain and set aside, reserving 1/2 cup of pasta water.</li>
+        <li><strong>Prepare the sauce:</strong> In a large pan, heat olive oil or butter over medium heat. Add minced garlic and sauté for about 1 minute until fragrant.</li>
+        <li><strong>Add Boursin cheese:</strong> Lower the heat and add the Boursin cheese to the pan, stirring until it begins to melt into a creamy sauce. If you'd like the sauce to be creamier, stir in the heavy cream or milk at this point.</li>
+        <li><strong>Combine with pasta:</strong> Add the cooked pasta to the pan and toss to coat in the sauce. If the sauce is too thick, gradually add some of the reserved pasta water to loosen it up until you reach your desired consistency.</li>
+        <li><strong>Add extras (optional): </strong>For added freshness, toss in a handful of fresh spinach and halved cherry tomatoes. Allow the spinach to wilt slightly and the tomatoes to soften.</li>
+        <li><strong>Finish with lemon and Parmesan:</strong> Stir in the lemon juice and zest, followed by the grated Parmesan. Season with salt and pepper to taste.</li>
+        <li><strong>Garnish and serve:</strong> Plate the pasta and garnish with fresh basil or parsley, along with an extra sprinkle of Parmesan if desired. Serve immediately and enjoy!</li>
+    </ol>
+
 </body>
 </html>
